test/files/semantic/reject/var_redef_global_to_param.neo
let x: int = 10

func f(x: char)

end
